typescript/checker/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            294,
        ),
        hi: BytePos(
            296,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:9:5
  |
9 | var a2: boolean;
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            311,
        ),
        hi: BytePos(
            313,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:10:5
   |
10 | var a3: number
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            326,
        ),
        hi: BytePos(
            328,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:11:5
   |
11 | var a4: string;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            342,
        ),
        hi: BytePos(
            344,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:12:5
   |
12 | var a5: void;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            356,
        ),
        hi: BytePos(
            358,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:13:5
   |
13 | var a6: E;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            367,
        ),
        hi: BytePos(
            369,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:14:5
   |
14 | var a7: {a: string};
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            388,
        ),
        hi: BytePos(
            390,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:15:5
   |
15 | var a8: string[];
   |     ^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:72:11
   |
72 | var rg1 = a1 || a6;         // any       || enum is any
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:73:11
   |
73 | var rg2 = a2 || a6;         // boolean   || enum is boolean | enum
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:74:11
   |
74 | var rg3 = a3 || a6;         // number    || enum is number
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:75:11
   |
75 | var rg4 = a4 || a6;         // string    || enum is string | enum
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:76:11
   |
76 | var rg5 = a5 || a6;         // void      || enum is void | enum
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:77:11
   |
77 | var rg6 = a6 || a6;         // enum      || enum is E
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:78:11
   |
78 | var rg7 = a7 || a6;         // object    || enum is object | enum
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:79:11
   |
79 | var rg8 = a8 || a6;         // array     || enum is array | enum
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:80:11
   |
80 | var rg9 = null || a6;       // null      || enum is E
   |           ^^^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:81:12
   |
81 | var rg10 = undefined || a6; // undefined || enum is E
   |            ^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6073,
        ),
        hi: BytePos(
            6082,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:116:17
    |
116 | var rf1 = a1 || undefined;         // any       || undefined is any
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6141,
        ),
        hi: BytePos(
            6150,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:117:17
    |
117 | var rf2 = a2 || undefined;         // boolean   || undefined is boolean
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6213,
        ),
        hi: BytePos(
            6222,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:118:17
    |
118 | var rf3 = a3 || undefined;         // number    || undefined is number
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6284,
        ),
        hi: BytePos(
            6293,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:119:17
    |
119 | var rf4 = a4 || undefined;         // string    || undefined is string
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6355,
        ),
        hi: BytePos(
            6364,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:120:17
    |
120 | var rf5 = a5 || undefined;         // void      || undefined is void
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6424,
        ),
        hi: BytePos(
            6433,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:121:17
    |
121 | var rf6 = a6 || undefined;         // enum      || undefined is E
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6490,
        ),
        hi: BytePos(
            6499,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:122:17
    |
122 | var rf7 = a7 || undefined;         // object    || undefined is object
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6561,
        ),
        hi: BytePos(
            6570,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:123:17
    |
123 | var rf8 = a8 || undefined;         // array     || undefined is array
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6633,
        ),
        hi: BytePos(
            6642,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:124:19
    |
124 | var rf9 = null || undefined;       // null      || undefined is any
    |                   ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            6707,
        ),
        hi: BytePos(
            6716,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalOrOperator/logicalOrOperatorWithEveryType.ts:125:25
    |
125 | var rf10 = undefined || undefined; // undefined || undefined is any
    |                         ^^^^^^^^^

